# TMSU

./: .gitignore  .hgignore  .travis.yml  CHANGES.md  COMPILING - Copy.md  COMPILING.md  CONTRIBUTING.md  COPYING  COPYING.md  Cargo.toml  LICENSE  LICENSE.go-fuse  LICENSE.gosqlite  Makefile  QUERIES  README  README.md  RELEASE-NOTES  ROADMAP  TODO  VERSIONS  build  go.mod  go.sum  main.go  make.sh  makefile
.github/workflows/: build.yml  release.yml
cli/: cli.go  command.go  commands.go  commands_windows.go  common.go  config.go  copy.go  delete.go  dupes.go  errors.go  files.go  help.go  imply.go  info.go  init.go  merge.go  mount.go  option.go  option_test.go  rename.go  repair.go  status.go  tag.go  unmount.go  untag.go  untagged.go  values.go  version.go
common/: version.go  version_test.go
common/filesystem/: filesystem.go
common/fingerprint/: fingerprinter.go  fingerprinter_test.go  types.go
common/log/: log.go
common/path/: path.go  path_test.go  tree.go  tree_test.go
common/terminal/: print.go  terminal.go  terminal_windows.go
common/text/: tokenize.go  tokenize_test.go
crates/cli/: .gitignore  Cargo.toml  README.md
crates/cli/src/: args.rs  command.rs  constants.rs  database.rs  main.rs  rendering.rs
crates/cli/src/command/: files.rs  info.rs  init.rs
crates/lib/: Cargo.toml  README.md
crates/lib/src/: common.rs  database.rs  error.rs  file.rs  lib.rs  migrations.rs  query.rs  setting.rs  sql.rs  tag.rs  value.rs
crates/lib/src/database/: common.rs  file.rs  query.rs  setting.rs  settings.rs  tag.rs  tags.rs  value.rs
crates/lib/src/database/file/: query.rs
crates/lib/src/file/: query.rs
crates/lib/src/file/query/: builder.rs  parser.rs  query.pest
crates/lib/src/grammars/: query.pest
crates/lib/src/migrations/: 0_schema_version.sql  1_schema.sql  2_indices.sql
crates/lib/src/sql/: builder.rs
database/: data.sql  tables.sql
design/: example  thoughts
entities/: file.go  file_test.go  filetag.go  implication.go  query.go  setting.go  tag.go  tag_test.go  types.go  value.go  value_test.go
misc/: README
misc/bash/: tmsu
misc/db-upgrade/: 0.0.5_to_0.0.6.sql  0.0.9_to_0.1.0.sql  0.3_to_0.4.0.sql  clean_tag_names.sql  migrate-tags-to-values  tip_to_0.1.0.sql  tip_to_0.2.0.sql  trunk_to_0.1.0.sql
misc/ebnf/: query.ebnf
misc/man/: tmsu.1
misc/perf/: create-tags
misc/sql/: implied tags
misc/zsh/: README  _tmsu
query/: parser.go  parser_test.go  query.go  scanner.go  scanner_test.go
sbin/: mount.tmsu
src/: cli.rs  errors.rs  main.go  main.rs  storage.rs  tmsu
src/api/: info.rs  init.rs
src/cli/: info.rs  init.rs
src/commands/: help.go
src/db/: Makefile  database.go  db.go  tag.go
src/go-fuse/: .gitignore  README  all.bash
src/main/: Makefile  command.go  config.go  config_test.go  database.go  fingerprinter.go  fusevfs.go  (+5 more)
storage/: errors.go  file.go  filetag.go  implication.go  query.go  setting.go  storage.go  tag.go  value.go
tests/: TODO  db  run  run-all  run-one  runall  setup  teardown
vfs/: fusevfs.go  mtable.go
(+727 files in other folders)
