[package]
authors = [ "Paul Ruane <paul.ruane@oniony.com>" ]
categories = [ "command-line-utilities", "filesystem" ]
description = "A tool for tagging your files and accessing them via a virtual file system"
documentation = "https://www.github.com/oniony/TMSU/wiki"
homepage = "https://tmsu.org/"
license = "GPL-3.0-or-later"
name = "libtmsu"
readme = "README.md"
repository = "https://github.com/oniony/TMSU"
version = "1.0.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
tokio = {  version = "1.47", features = ["macros", "rt-multi-thread"] }
