[package]
authors = ["Paul Ruane <paul.ruane@oniony.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "A tool for tagging your files and accessing them via a virtual file system"
documentation = "https://www.github.com/oniony/TMSU/wiki"
homepage = "https://tmsu.org/"
license = "GPL-3.0-or-later"
name = "libtmsu"
readme = "README.md"
repository = "https://github.com/oniony/TMSU"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "0.4"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
pest = "2.8"
pest_derive = "2.8"